--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -53,11 +53,11 @@ html{
     font-size: 0.36rem;
 }
 #mobileDetailsContainer .ant-row{
-    margin-top: 20px;
+    /*margin-top: 20px;*/
 }
 
 .ucmobileList{
-    margin-top: 60px;
+    /*margin-top: 60px;*/
 }
 
 
